# robocaucus

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  manifest  start.sh
.beads/: config.yaml  last-touched  metadata.json
backend/: Cargo.toml
backend/src/: agentmd.rs  context.rs  db.rs  main.rs  mention.rs  reconcile.rs  scaffold.rs  state.rs  templates.rs  tmux.rs
backend/src/adapter/: claude.rs  codex.rs  copilot.rs  gemini.rs  mod.rs
backend/src/orchestrate/: debate.rs  mod.rs  panel.rs
backend/src/routes/: agentmd.rs  agents.rs  chat.rs  config.rs  conversations.rs  files.rs  git.rs  mod.rs  playbooks.rs  pr_review.rs  providers.rs
common/src/: lib.rs
docs/: claude-cli.md  codex-cli.md  copilot-cli.md  gemini-cli.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentBuilder.tsx  ChatInput.tsx  ChatMessage.tsx  CodeViewer.tsx  DevSidebar.tsx  FileTree.tsx  PlaybookBrowser.tsx  RoomMembers.tsx  Sidebar.tsx  TabBar.tsx  ThemeSelector.tsx  WorkspaceSelector.tsx
frontend/src/components/git/: ChangesTree.tsx  CommitDetails.tsx  CommitView.tsx  DiffViewer.tsx  GitGraph.tsx  GitGraphCanvas.tsx
frontend/src/components/ui/: CollapsibleSection.tsx  PathListInput.tsx  TagInput.tsx  index.ts
frontend/src/hooks/: useChat.ts  useWorkspace.ts
frontend/src/lib/: api.ts
tui/: Cargo.toml
tui/src/: main.rs
